deserialisation-friendly json file

--- a/EnigmaMachine/config.json
+++ b/EnigmaMachine/config.json
@@ -1,39 +1,36 @@
 {
-  "plugboad": [
+  "plugboard": [
     "AF",
     "LB",
     "YE"
   ],
   "rotors": {
-    "I": {
-      "A": "E",
-      "B": "J",
-      "C": "M",
-      "...": "...",
-    },
-    "II": {
-      "A": "A",
-      "B": "J",
-      "C": "D",
-      "...": "..."
-    },
-    "III": {
-      "A": "B",
-      "B": "D",
-      "C": "F",
-      "...": "..."
-    },
-    "IV": {
-      "A": "E",
-      "B": "S",
-      "C": "O",
-      "...": "..."
-    },
-    "V": {
-      "A": "V",
-      "B": "Z",
-      "C": "G",
-      "...": "..."
+    "definitions": {
+      "I": {
+        "A": "E",
+        "B": "J",
+        "C": "M"
+      },
+      "II": {
+        "A": "A",
+        "B": "J",
+        "C": "D"
+      },
+      "III": {
+        "A": "B",
+        "B": "D",
+        "C": "F"
+      },
+      "IV": {
+        "A": "E",
+        "B": "S",
+        "C": "O"
+      },
+      "V": {
+        "A": "V",
+        "B": "Z",
+        "C": "G"
+      }
     },
     "positions": [
       {
@@ -53,7 +50,6 @@
   "reflector": {
     "A": "Y",
     "B": "R",
-    "C": "U",
-    "...": "..."
+    "C": "U"
   }
 }
